fixing margins on mobile

--- a/styles.css
+++ b/styles.css
@@ -654,6 +654,7 @@ div.donate-steps div:before {
     .footer img {
         margin: 30px;
         margin-top: 50px;
+        margin-left: 15px;
         height: 100px;
     }
     
@@ -668,6 +669,7 @@ div.donate-steps div:before {
 
     .footer p {
         margin-left: 10px;
+        margin-right: 15px;
     }
     
     #insta img {
